--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
   "author": "Rentolly",
   "license": "GPL-3",
   "dependencies": {
-    "@discord-player/equalizer": "^0.2.1",
-    "@discord-player/extractor": "^4.2.1",
-    "@discordjs/builders": "^1.6.1",
+    "@discord-player/equalizer": "^0.2.3",
+    "@discord-player/extractor": "^4.5.1",
+    "@discordjs/builders": "^1.8.2",
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/rest": "^1.7.0",
-    "@discordjs/voice": "^0.16.0",
+    "@discordjs/rest": "^1.7.1",
+    "better-sqlite3": "^11.2.1",
     "canvas": "^2.10.1",
-    "discord-player": "^6.2.1",
-    "discord.js": "^14.9.0",
-    "ffmpeg-static": "^5.0.0",
-    "mongoose": "^7.0.5",
-    "play-dl": "^1.9.6",
-    "prism-media": "^1.3.5",
-    "ytdl-core": "^4.9.1"
+    "discord-player": "^6.7.1",
+    "discord-player-youtubei": "^1.2.6",
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
+    "ffmpeg-static": "^5.2.0",
+    "quick.db": "^9.1.7"
   }
 }
