--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord-player-youtubei": "^1.2.6",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "ffmpeg-static": "^5.2.0",
     "quick.db": "^9.1.7"
   }
