--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    runtime: node
+    runtime: node 20.17.0
     name: discord-bot-gura
     repo: https://github.com/owfej213/Disocrd-Musicbot-Gura
     region: oregon
