CommonJS to ESM

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 # 機器人Token
-botToken=your-bot-token
+BOT_TOKEN=your-bot-token
 
 # 機器人ID
-botId=your-bot-id
+BOT_ID=your-bot-id
 
 # 機器人擁有者/開發者ID
-ownerId=your-user-id
+DEV_IDS=your-user-id
 
 # 測試指令用伺服器ID
-testGuildId=your-test-guild-id
+DEV_GUILD=your-dev-guild-id
 
 # 文字指令開頭符號
-prefix="!"
+PREFIX="!"
