--- a/package.json
+++ b/package.json
@@ -3,26 +3,30 @@
   "version": "1.0.0",
   "description": "discord-bot",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "register": "node scripts/register.js"
   },
   "author": "Rentolly",
   "license": "GPL-3",
   "dependencies": {
     "@discord-player/equalizer": "^0.2.3",
     "@discord-player/extractor": "^4.5.1",
-    "@discordjs/builders": "^1.8.2",
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/rest": "^1.7.1",
     "better-sqlite3": "^11.2.1",
     "canvas": "^2.10.1",
     "discord-player": "^6.7.1",
     "discord-player-youtubei": "^1.2.6",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "ffmpeg-static": "^5.2.0",
+    "glob": "^11.0.0",
     "quick.db": "^9.1.7"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.9.0"
   }
 }
