improve help command

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,11 @@ BOT_TOKEN=your-bot-token
 # 機器人ID
 BOT_ID=your-bot-id
 
-# 機器人擁有者/開發者ID
-DEV_IDS=your-user-id
+# 機器人擁有者ID
+OWNER_ID=your-user-id
+
+# 機器人開發者/開發團隊ID
+DEV_IDS=your-user-id,your-teammate-id
 
 # 測試指令用伺服器ID
 DEV_GUILD=your-dev-guild-id
