--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "quick.db": "^9.1.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "eslint": "^9.9.1",
+    "@eslint/js": "^9.10.0",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
     "prettier": "^3.3.3"
   }
